# testa-delta

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.7089d4e  content.qrc  doc.txt  settings - Copy.json  settings.json
cmake/: windeployqt.cmake
libs/qcustomplot/: CMakeLists.txt
res/: defaultSettings
src/: aaa.cpp  calibrationmodel.cpp  calibrationmodel.h  calibrationwidget.cpp  calibrationwidget.h  communication.h  communication.hpp  config.h.in  controller.h  controller.hpp  correctionwidget.cpp  correctionwidget.h  dataholder.cpp  dataholder.h  dataholderplot.cpp  dataholderplot.h  dataholderplotwidget.cpp  dataholderplotwidget.h  deltawidget.cpp  deltawidget.h  icommunication.h  idataholder.h  initialcorrectionwidget.cpp  initialcorrectionwidget.h  iprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  pidwidget.cpp  pidwidget.h  process.cpp  process.h  rs485comminication.cpp  rs485comminication.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  utils.cpp  utils.h
src/common/: filereader.h  filewriter.h
tests/: communication_helper.h  communication_test.cpp  helpers.hpp  test.cpp
